--- a/Frontend Compts/Login form/sass/main.scss
+++ b/Frontend Compts/Login form/sass/main.scss
@@ -34,23 +34,30 @@ body {
     ),
     url(../img/newyork.jpg);
   padding: 7% 8rem;
-}
-
-.buttons {
-  display: flex;
-  gap: 2rem;
-  // margin-top: 20%;
+  position: relative;
 }
 
 .radio-button {
   &__input {
-    display: block;
+    display: none;
   }
+
   &__button {
     text-transform: uppercase;
     font-size: 2.4rem;
     color: $color-white;
-    // border-bottom: 1.5px solid yellow;
+    position: absolute;
+    left: 8rem;
+    top: 8rem;
+    padding: .25rem;
+
+    &--2 {
+      left: 19rem;
+    }
+  }
+
+  &__input:checked ~ &__button {
+    border-bottom: 1.5px solid #1c7ed6;
   }
 }
 
@@ -115,6 +122,10 @@ body {
       text-decoration: none;
       color: rgba($color-white, 0.5);
       cursor: pointer;
+    }
+    a:hover,
+    a:active {
+      color: rgba($color-white, 1);
     }
   }
 }
